--- a/css/style.css
+++ b/css/style.css
@@ -18,17 +18,24 @@ body {
 }
 
 #myimg {
-  margin-top: 0em;
+  margin-top: 1em;
   margin-bottom: 2em;
   border-radius: 90%;
-  height: 8cm;
-  width: 17em;
+  height: auto;
+  width: 100%;
+  max-width: 350px;
 }
 
 #info-div {
-  margin-top: 2em;
+  margin-top: 1em;
   border-color: black;
   margin-left: 30px;
+  height: auto;
+  font-size: 20px;
+  -webkit-text-size-adjust: auto;
+     -moz-text-size-adjust: auto;
+      -ms-text-size-adjust: auto;
+          text-size-adjust: auto;
 }
 
 hr {
@@ -64,5 +71,31 @@ table, th, td {
 
 div {
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+@media (max-width: 600px) {
+  #info-div {
+    margin-top: 1em;
+    border-color: black;
+    margin-left: 30px;
+    font-size: 15px;
+    -webkit-text-size-adjust: auto;
+       -moz-text-size-adjust: auto;
+        -ms-text-size-adjust: auto;
+            text-size-adjust: auto;
+    display: block;
+  }
+  #myimg {
+    margin-top: 8em;
+    border-radius: 90%;
+    height: auto;
+    width: 100%;
+    max-width: 500px;
+  }
+  #second-Container {
+    position: relative;
+    background-color: beige;
+    border: 3px solid black;
+  }
 }
 /*# sourceMappingURL=style.css.map */
